--- a/keepassxc/keepassxc.ini
+++ b/keepassxc/keepassxc.ini
@@ -9,6 +9,7 @@ Enabled=true
 [GUI]
 ApplicationTheme=dark
 ColorPasswords=true
+HidePasswords=false
 MinimizeOnClose=false
 MinimizeOnStartup=false
 MinimizeToTray=false
