--- a/i3/config
+++ b/i3/config
@@ -189,8 +189,8 @@ bindsym XF86MonBrightnessUp exec --no-startup-id brightnessctl set +5%
 # Diminui o brilho em 5%
 bindsym XF86MonBrightnessDown exec --no-startup-id brightnessctl set 5%-
 
-
-
+# touchpad
+xinput set-prop 12 "libinput Tapping Enabled" 1
 
 
 # bluetooth
