--- a/i3/config
+++ b/i3/config
@@ -1,10 +1,8 @@
 set $mod Mod1
 
-font pango:monospace 12 # Font for window titles
-
 exec_always --no-startup-id ~/dotfiles/i3/start_polybar.sh
 
-font pango:DejaVu Sans Mono 10
+font pango:JetbrainsMono Nerd Font Bold 10
 
 # Start XDG autostart .desktop files using dex. See also
 # https://wiki.archlinux.org/index.php/XDG_Autostart
@@ -190,7 +188,7 @@ bindsym XF86MonBrightnessUp exec --no-startup-id brightnessctl set +5%
 bindsym XF86MonBrightnessDown exec --no-startup-id brightnessctl set 5%-
 
 # touchpad
-xinput set-prop 12 "libinput Tapping Enabled" 1
+# xinput set-prop 12 "libinput Tapping Enabled" 1
 
 
 # bluetooth
