--- a/polybar/config.ini
+++ b/polybar/config.ini
@@ -16,14 +16,25 @@
 ;
 ;==========================================================
 
+#[colors]
+#background = #282A2E
+#background-alt = #373B41
+#foreground = #C5C8C6
+#primary = #F0C674
+#secondary = #8ABEB7
+#alert = #A54242
+#disabled = #707880
+
 [colors]
-background = #282A2E
-background-alt = #373B41
-foreground = #C5C8C6
-primary = #F0C674
-secondary = #8ABEB7
-alert = #A54242
-disabled = #707880
+background = #0d0f20    
+background-alt = #1b1e34 
+foreground = #e6ebef
+primary = #5294e2     
+secondary = #ff4dff    
+alert = #ff6161         
+disabled = #4e505c       
+transparent = #00000000   
+label = #ffc600   
 
 [bar/example]
 width = 100%
@@ -48,7 +59,8 @@ module-margin = 1
 separator = |
 separator-foreground = ${colors.disabled}
 
-font-0 = monospace;2
+#font-0 = monospace;2
+font-0 = JetBrainsMono Nerd Font:size=11:weight=bold;2
 
 modules-left = xworkspaces xwindow
 modules-right = filesystem pulseaudio xkeyboard memory cpu cputemp wlan eth date
@@ -90,6 +102,7 @@ label-empty-foreground = ${colors.disabled}
 label-empty-padding = 1
 
 [module/xwindow]
+format-prefix = "  "
 type = internal/xwindow
 label = %title:0:60:...%
 
@@ -129,6 +142,7 @@ label-indicator-foreground = ${colors.background}
 label-indicator-background = ${colors.secondary}
 
 [module/memory]
+;format-prefix = " "
 type = internal/memory
 interval = 2
 format-prefix = "RAM "
@@ -138,7 +152,7 @@ label = %percentage_used:2%%
 [module/cpu]
 type = internal/cpu
 interval = 2
-format-prefix = "CPU "
+format-prefix = " "
 format-prefix-foreground = ${colors.primary}
 label = %percentage:2%%
 
@@ -156,18 +170,32 @@ format-disconnected = <label-disconnected>
 label-disconnected = %{F#F0C674}%ifname%%{F#707880} disconnected
 
 [module/wlan]
+ramp-signal-0 = 
+ramp-signal-1 = 
+ramp-signal-2 = 
+ramp-signal-3 = 
+ramp-signal-4 = 
+format-connected-prefix = "  "
 inherit = network-base
 interface-type = wireless
-label-connected = %{F#F0C674}%ifname%%{F-} %essid% %local_ip%
+label-connected = %essid%
+
+;label-connected = %{F#F0C674}%ifname%%{F-} %essid% %local_ip%
 
 [module/eth]
+format-connected-prefix = "󰈀 "
 inherit = network-base
 interface-type = wired
-label-connected = %{F#F0C674}%ifname%%{F-} %local_ip%
+label-connected = wired
+;label-connected = %{F#F0C674}%ifname%%{F-} %local_ip%
 
 [module/date]
 type = internal/date
 interval = 1
+
+;[module/powermenu]
+;label-open = 
+;label-close =  cancel
 
 date = %H:%M
 date-alt = %Y-%m-%d %H:%M:%S
