--- a/mpv/mpv.conf
+++ b/mpv/mpv.conf
@@ -1,24 +1,18 @@
-# put in %APPDATA%/mpv
-
 # uosc provides seeking & volume indicators (via flash-timeline and flash-volume commands)
 # if you decide to use them, you don't need osd-bar
 osd-bar=no
 
 ao=pulse
 
+hwdec=auto-safe
+
+video-sync=display-resample
+
 geometry=640x360
-
-# playlist-autoload
-
-# no-border
 
 volume=50
 
 save-position-on-quit
-
-# keep-open
-
-# screenshot-directory="D:\OneDrive\media\screenshots"
 
 force-window # always spawn in window mode
 
@@ -30,3 +24,18 @@ force-window # always spawn in window mode
 # --volume=50
 # force-window-position 
 # don't let the mpv window move it's position (x11 exclusive)
+# keep-open
+# screenshot-directory="D:\OneDrive\media\screenshots"
+# playlist-autoload
+# no-border
+
+#[image]
+# force-window=yes
+# hr-seek=yes
+#image-display-duration=inf
+# input-conf=~/.config/mpv/image-input.conf
+#loop-playlist=inf
+#loop-file=inf
+#keep-open=always
+# mute=yes
+# reset-on-next-file=mute,video-pan-x,video-pan-y,video-zoom
