--- a/windows/FlowLauncher/Settings/Plugins/Flow.Launcher.Plugin.Program/Settings.json
+++ b/windows/FlowLauncher/Settings/Plugins/Flow.Launcher.Plugin.Program/Settings.json
@@ -1,5 +1,5 @@
 {
-  "LastIndexTime": "2025-06-05T13:34:19.0395972-03:00",
+  "LastIndexTime": "2025-06-28T19:19:44.848337-03:00",
   "ProgramSources": [],
   "DisabledProgramSources": [],
   "CustomSuffixes": [],
