--- a/windows/FlowLauncher/Settings/Settings.json
+++ b/windows/FlowLauncher/Settings/Settings.json
@@ -50,10 +50,10 @@
   "TimeFormat": "hh:mm tt",
   "DateFormat": "MM\u0027/\u0027dd ddd",
   "FirstLaunch": false,
-  "SettingWindowWidth": 1536,
-  "SettingWindowHeight": 832,
-  "SettingWindowTop": 32,
-  "SettingWindowLeft": 0,
+  "SettingWindowWidth": 1526.4,
+  "SettingWindowHeight": 822.4000000000001,
+  "SettingWindowTop": 36.800000000000004,
+  "SettingWindowLeft": 4.800000000000001,
   "SettingWindowState": 0,
   "ShowPlaceholder": true,
   "PlaceholderText": "",
@@ -132,7 +132,7 @@
   "AlwaysStartEn": false,
   "QuerySearchPrecision": "Regular",
   "AutoUpdates": false,
-  "WindowLeft": 768,
+  "WindowLeft": 478,
   "WindowTop": 229.6,
   "PreviousScreenWidth": 0,
   "PreviousScreenHeight": 0,
@@ -142,7 +142,7 @@
   "CustomWindowTop": 0,
   "KeepMaxResults": false,
   "MaxResultsToShow": 5,
-  "ActivateTimes": 702,
+  "ActivateTimes": 758,
   "CustomPluginHotkeys": [],
   "CustomShortcuts": [],
   "DontPromptUpdateMsg": false,
