--- a/windows/FlowLauncher/Settings/Settings.json
+++ b/windows/FlowLauncher/Settings/Settings.json
@@ -50,7 +50,7 @@
   "TimeFormat": "hh:mm tt",
   "DateFormat": "MM\u0027/\u0027dd ddd",
   "FirstLaunch": false,
-  "SettingWindowWidth": 1526.4,
+  "SettingWindowWidth": 762.4000000000001,
   "SettingWindowHeight": 822.4000000000001,
   "SettingWindowTop": 36.800000000000004,
   "SettingWindowLeft": 4.800000000000001,
@@ -142,7 +142,7 @@
   "CustomWindowTop": 0,
   "KeepMaxResults": false,
   "MaxResultsToShow": 5,
-  "ActivateTimes": 758,
+  "ActivateTimes": 791,
   "CustomPluginHotkeys": [],
   "CustomShortcuts": [],
   "DontPromptUpdateMsg": false,
