--- a/windows/windows-terminal/settings.json
+++ b/windows/windows-terminal/settings.json
@@ -17,24 +17,24 @@
     "keybindings": 
     [
         {
-            "id": "Terminal.OpenNewTab",
-            "keys": "ctrl+t"
-        },
-        {
             "id": null,
             "keys": "ctrl+c"
         },
         {
-            "id": "User.quakeMode.F1E129A4",
-            "keys": "ctrl+shift+q"
+            "id": "Terminal.OpenNewTab",
+            "keys": "ctrl+t"
+        },
+        {
+            "id": "Terminal.FindText",
+            "keys": "ctrl+shift+f"
         },
         {
             "id": null,
             "keys": "ctrl+v"
         },
         {
-            "id": "Terminal.FindText",
-            "keys": "ctrl+shift+f"
+            "id": "User.quakeMode.F1E129A4",
+            "keys": "ctrl+shift+q"
         },
         {
             "id": null,
@@ -109,7 +109,7 @@
                 "experimental.retroTerminalEffect": false,
                 "font": 
                 {
-                    "face": "MesloLGSDZ Nerd Font"
+                    "face": "JetBrainsMono Nerd Font"
                 },
                 "guid": "{574e775e-4f2a-5b96-ac1e-a2962a402336}",
                 "hidden": false,
