--- a/windows/FlowLauncher/Settings/Plugins/Flow.Launcher.Plugin.Shell/Settings.json
+++ b/windows/FlowLauncher/Settings/Plugins/Flow.Launcher.Plugin.Shell/Settings.json
@@ -20,6 +20,16 @@
     "subl C:\\users\\user\\rne-guide.pdf": 2,
     "winver": 1,
     "ipconfig": 1,
-    "iconset": 4
+    "iconset": 5,
+    "soundpanel": 1,
+    "variant": 1,
+    "gude-octet": 1,
+    "guide-octet": 1,
+    "guide-variant": 2,
+    "\u0022D:\\games\\sciadv\\STEINS GATE - Linear Bounded Phenogram\\Game.exe\u0022": 2,
+    "D:\\games\\sciadv\\STEINS GATE - Linear Bounded Phenogram\\Game.exe": 1,
+    "\u0026 \u0022D:\\games\\sciadv\\STEINS GATE - Linear Bounded Phenogram\\Game.exe\u0022": 1,
+    "cd \u0022D:\\games\\sciadv\\STEINS GATE - Linear Bounded Phenogram\\\u0022": 1,
+    "ping google.com": 1
   }
 }
