--- a/windows/windows-terminal/settings.json
+++ b/windows/windows-terminal/settings.json
@@ -26,7 +26,7 @@
         },
         {
             "id": "Terminal.FindText",
-            "keys": "ctrl+shift+f"
+            "keys": "ctrl+f"
         },
         {
             "id": null,
